fix(table): 固定列单元格的z-index值设置为100

--- a/style/web/components/table/_index.less
+++ b/style/web/components/table/_index.less
@@ -386,7 +386,7 @@
 
     .@{prefix}-table__cell--fixed-left,
     .@{prefix}-table__cell--fixed-right {
-      z-index: 1;
+      z-index: 100;
     }
 
     .@{prefix}-table__cell--fixed-left-last {
